--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   "dependencies": {
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
     "react-scripts": "4.0.0",
+    "redux": "^4.2.0",
     "use-eye-dropper": "1.4.3"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
+    "eslint": "^7.11.0",
+    "eslint-plugin-react": "^7.32.1",
+    "prettier": "^2.8.3",
     "typescript": "4.1.3"
   },
   "scripts": {
