--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "color-convert": "^2.0.1",
+    "colorcolor": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
