--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "@reach/portal": "^0.18.0",
+    "@reach/tooltip": "^0.18.0",
     "color-convert": "^2.0.1",
     "colorcolor": "^3.0.1",
+    "inter-ui": "^3.19.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
