--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "@brandwatch/axiom-components": "^15.12.6",
     "@reach/portal": "^0.18.0",
     "@reach/tooltip": "^0.18.0",
     "color-convert": "^2.0.1",
